css: main: Fix default vertical alignment for CSS3

--- a/src/css/6100-main-base-modern.css
+++ b/src/css/6100-main-base-modern.css
@@ -29,7 +29,7 @@
     display: inline-flex;
     flex: 1 1 100%;
     align-content: stretch;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
     flex-flow: row wrap;
 
